# RTNeural-Experimental

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: examples.yml
examples/: CMakeLists.txt
examples/accelerate/: CMakeLists.txt  rtneural_accelerate.cpp
examples/quantization/: CMakeLists.txt  model_fp32.json  quant_test.py  quantization.cpp
examples/residual_connection/: CMakeLists.txt  res_connection.json  res_connection_python.csv  res_connection_x_python.csv  res_connection_y_python.csv  residual_connection.cpp  residual_connection.py
examples/snafx/: CMakeLists.txt  FiLM.h  FiLM.tpp  SNAFxModel.h  TCNBlock.h  TCNBlock.tpp  model_comp.json  snafx.cpp
include/RTNeural-accelerate/RTNeural/: accelerate_common.h  activation_accelerate.h  conv1d_accelerate.h  conv1d_accelerate.tpp  dense_accelerate.h  gru_accelerate.h  lstm_accelerate.h
include/RTNeural-experiments/RTNeural/: add_layer.h
